--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,7 @@ description: > # the ">" symbol means to ignore newlines until "footer_text:"
 footer_text: >
   Designed by <a href="https://github.com/mmarquezsosa" target="_blank">mmarquezsosa</a>.
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
-  Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your own keywords or leave empty
+keywords: centro medico, imagenes, mamografia, densitometria, ecografia, ultrasonido, dra jenny sosa, jenny sosa # add your own keywords or leave empty
 lang: es # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ⚛️ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
